--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,5 +1,5 @@
 body {
-  background-color: darkred;
+  background-color: #8b00005c;
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 h1{
@@ -10,13 +10,63 @@ h1{
   width: 10%;
 }
 .standard-list li{
-  color:yellow;
+  color:transparent;
   background-color:darkslategray;
   border: 1px solid palevioletred;
   padding: 3%;
   border-radius: 5%;
   margin-top:2%;
+  cursor: pointer;
 }
 .standard-list li span{
   color:#fff;
+}
+
+.student-class{
+  /* border: 1px solid #fff; */
+  padding: 1%;
+  width: 20%;
+}
+
+form{
+  background: #fff;
+  padding: 20px;
+  position: fixed;
+  left: 0;  
+  bottom: 0;
+  width: 400px;
+}
+
+form .form-group{
+display: grid;
+grid-template-columns: 1fr 1fr;
+grid-gap: 10px;
+}
+
+form label{
+  text-align: right;
+  padding: 6px;
+}
+
+form select, form input{
+  margin: 4px;
+  padding: 6px;
+  box-sizing: border-box;
+}
+
+div .standard-detail{
+  position: fixed;
+  top:0;
+  right:0;
+  width: 40%;
+  height:100%;
+  background: #AD1457;
+  padding: 30px;
+  overflow: auto;
+  box-shadow: -2px -3px 5px rgbp(0,0,0,0.3);
+  box-sizing: border-box;
+  color:#fff;
+}
+.standard-detail li{
+  width: 300px !important;
 }
